--- a/conf/web.xml
+++ b/conf/web.xml
@@ -8,12 +8,17 @@
 	<display-name>Search Servlets</display-name>
 	
 	<servlet>
-		<servlet-name>search</servlet-name>
+		<servlet-name>SearchServlet</servlet-name>
 		<servlet-class>edu.upenn.cis455.servlet.SearchServlet</servlet-class>
+		<init-param>
+			<param-name>jspResult</param-name>
+			<param-value>ui/result.jsp</param-value>
+		</init-param>
+		<load-on-startup/>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>search</servlet-name>
+		<servlet-name>SearchServlet</servlet-name>
 		<url-pattern>/search</url-pattern>
 	</servlet-mapping>
 
