--- a/conf/web.xml
+++ b/conf/web.xml
@@ -6,13 +6,13 @@
 
 <web-app>
 	<display-name>Search Servlets</display-name>
-	
+
 	<servlet>
 		<servlet-name>SearchServlet</servlet-name>
 		<servlet-class>edu.upenn.cis455.servlet.SearchServlet</servlet-class>
-		<load-on-startup/>
+		<load-on-startup>0</load-on-startup>
 	</servlet>
-	
+
 	<servlet-mapping>
 		<servlet-name>SearchServlet</servlet-name>
 		<url-pattern>/search</url-pattern>
